{
    "name": "DeveloperConsoleInput",
    "maps": [
        {
            "name": "Developer Console",
            "id": "ef1bdfcb-eb47-4699-8cd4-4488d7f694a7",
            "actions": [
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "7a582892-3360-4f95-8275-80e04d46edc2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoreRecentCommand",
                    "type": "Button",
                    "id": "b52b4ee2-9642-464b-82e5-0135e75621eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LessRecentCommand",
                    "type": "Button",
                    "id": "a1bb1440-f0f7-417c-89e2-7b1ce8ddd7a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backspace",
                    "type": "Button",
                    "id": "2b8c1496-e1f6-4b24-8041-149920981194",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71bf5254-5910-468b-aa62-93b4db2a14fa",
                    "path": "<Keyboard>/slash",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0481e535-87cb-4f60-b8d9-3cae94f3d80d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MoreRecentCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d4e899-bd2a-40ff-a2e4-34a3dc47fee7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "LessRecentCommand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20b54966-3ca3-4be1-bfe7-1875acffaea1",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Backspace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}